// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> matches snapshot 1`] = `
<div>
  <div
    class="progress css-zvhxzj-container-container"
    id="my-progress-1"
  >
    <div
      data-testid="percentage"
    >
      75‏%
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> matches snapshot with zero percent 1`] = `
<div>
  <div
    class="css-1sp2dkk-container-container"
  >
    <div
      data-testid="percentage"
    >
      0‏%
    </div>
  </div>
</div>
`;
